docs: fix main-wrapper alignment on desktop

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -228,8 +228,16 @@ nav.navbar .dropdown__menu {
     height: 3rem;
 }
 
+.main-wrapper {
+    align-items: center;
+}
+
 .main-wrapper a[class*='sidebarLogo'] img {
     height: 3rem;
+}
+
+.main-wrapper a[class*='sidebarLogo'] b {
+    display: none;
 }
 
 html.plugin-pages {
